cviceni/.metadata/.plugins/org.eclipse.cdt.ui/cv06_uart.build.log
16:51:52 **** Build of configuration Debug for project cv06_uart ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L4R5xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:255:13: error: invalid storage class for function 'MX_LPUART1_UART_Init'
  255 | static void MX_LPUART1_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:303:13: error: invalid storage class for function 'MX_USART3_UART_Init'
  303 | static void MX_USART3_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:351:13: error: invalid storage class for function 'MX_USB_OTG_FS_PCD_Init'
  351 | static void MX_USB_OTG_FS_PCD_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:384:13: error: invalid storage class for function 'MX_DMA_Init'
  384 | static void MX_DMA_Init(void)
      |             ^~~~~~~~~~~
../Core/Src/main.c:406:13: error: invalid storage class for function 'MX_GPIO_Init'
  406 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:474:1: error: expected declaration or statement at end of input
  474 | }
      | ^
../Core/Src/main.c:125:21: warning: unused variable 'err' [-Wunused-variable]
  125 |   HAL_StatusTypeDef err;
      |                     ^~~
../Core/Src/main.c:124:11: warning: unused variable 'rxpos' [-Wunused-variable]
  124 |   uint8_t rxpos;
      |           ^~~~~
../Core/Src/main.c:123:8: warning: unused variable 'rxbuffer' [-Wunused-variable]
  123 |   char rxbuffer[10];
      |        ^~~~~~~~
../Core/Src/main.c:122:8: warning: unused variable 'type_of_transmit' [-Wunused-variable]
  122 |   char type_of_transmit[15];
      |        ^~~~~~~~~~~~~~~~
../Core/Src/main.c:121:12: warning: unused variable 'state' [-Wunused-variable]
  121 |   uint32_t state = 1;
      |            ^~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:65:13: warning: 'MX_GPIO_Init' used but never defined
   65 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:66:13: warning: 'MX_DMA_Init' used but never defined
   66 | static void MX_DMA_Init(void);
      |             ^~~~~~~~~~~
../Core/Src/main.c:67:13: warning: 'MX_LPUART1_UART_Init' used but never defined
   67 | static void MX_LPUART1_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:68:13: warning: 'MX_USART3_UART_Init' used but never defined
   68 | static void MX_USART3_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:69:13: warning: 'MX_USB_OTG_FS_PCD_Init' used but never defined
   69 | static void MX_USB_OTG_FS_PCD_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:465:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  465 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:406:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  406 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:384:13: warning: 'MX_DMA_Init' defined but not used [-Wunused-function]
  384 | static void MX_DMA_Init(void)
      |             ^~~~~~~~~~~
../Core/Src/main.c:351:13: warning: 'MX_USB_OTG_FS_PCD_Init' defined but not used [-Wunused-function]
  351 | static void MX_USB_OTG_FS_PCD_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:303:13: warning: 'MX_USART3_UART_Init' defined but not used [-Wunused-function]
  303 | static void MX_USART3_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:255:13: warning: 'MX_LPUART1_UART_Init' defined but not used [-Wunused-function]
  255 | static void MX_LPUART1_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:204:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  204 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

16:51:54 Build Failed. 7 errors, 17 warnings. (took 1s.546ms)

